force-app/main/default/objects/Delivery_Schedule__c/Delivery_Schedule__c.object-meta.xml
<CustomObject>
    <label>Delivery Schedule</label>
    <nameField>
        <displayFormat>DS-{000000}</displayFormat>
        <label>Delivery Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>