force-app/main/default/objects/Delivery_Schedule__c/fields/Clear_paths_to_the_entry_of_the_building__c.field-meta.xml
<CustomField>
    <fullName>Clear_paths_to_the_entry_of_the_building__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear paths to the entry of the building</label>
    <type>Checkbox</type>
</CustomField>