force-app/main/default/objects/Delivery_Schedule__c/fields/Construction_Project__c.field-meta.xml
<CustomField>
    <fullName>Construction_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Construction Project</label>
    <referenceTo>Construction_Project__c</referenceTo>
    <relationshipName>Delivery_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>