force-app/main/default/objects/Delivery_Schedule__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Delivery Schedules</relationshipLabel>
    <relationshipName>Delivery_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>