force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Includes_Electric_Range__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Includes_Electric_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Includes Electric Range</label>
    <type>Checkbox</type>
</CustomField>