force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Includes_Laundry__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Includes_Laundry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Includes Laundry</label>
    <type>Checkbox</type>
</CustomField>