force-app/main/default/objects/Delivery_Schedule__c/fields/Delivery_Includes_Range_Hoods__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Includes_Range_Hoods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery Includes Range Hoods</label>
    <type>Checkbox</type>
</CustomField>