force-app/main/default/objects/Delivery_Schedule__c/fields/EC_Completed__c.field-meta.xml
<CustomField>
    <fullName>EC_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Call Completed</label>
    <type>Checkbox</type>
</CustomField>