force-app/main/default/objects/Delivery_Schedule__c/fields/External_Call_Due__c.field-meta.xml
<CustomField>
    <fullName>External_Call_Due__c</fullName>
    <description>14 Days Prior to Delivery</description>
    <inlineHelpText>14 Days Prior to Delivery</inlineHelpText>
    <label>External Call Due</label>
    <type>Date</type>
</CustomField>