force-app/main/default/objects/Delivery_Schedule__c/fields/External_Call_Due_Task__c.field-meta.xml
<CustomField>
    <fullName>External_Call_Due_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Call Due Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>Delivery Schedules (External Call Due Task)</relationshipLabel>
    <relationshipName>Delivery_Schedules3</relationshipName>
    <type>Lookup</type>
</CustomField>