force-app/main/default/objects/Delivery_Schedule__c/fields/External_Call_Formula_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Call_Formula_Date__c</fullName>
    <formula>Delivery_Date__c - 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Call Formula Date</label>
    <type>Date</type>
</CustomField>