force-app/main/default/objects/Delivery_Schedule__c/fields/Includes_Gas_Appliances__c.field-meta.xml
<CustomField>
    <fullName>Includes_Gas_Appliances__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Gas Appliances?</label>
    <type>Checkbox</type>
</CustomField>