force-app/main/default/objects/Delivery_Schedule__c/fields/Includes_Installation__c.field-meta.xml
<CustomField>
    <fullName>Includes_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Installation?</label>
    <type>Checkbox</type>
</CustomField>