force-app/main/default/objects/Delivery_Schedule__c/fields/Internal_Call_Due__c.field-meta.xml
<CustomField>
    <fullName>Internal_Call_Due__c</fullName>
    <inlineHelpText>3 Weeks prior to delivery</inlineHelpText>
    <label>Internal Call Due</label>
    <type>Date</type>
</CustomField>