force-app/main/default/objects/Delivery_Schedule__c/fields/Internal_Task_Call_Created__c.field-meta.xml
<CustomField>
    <fullName>Internal_Task_Call_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Task Call Created</label>
    <type>Checkbox</type>
</CustomField>