force-app/main/default/objects/Delivery_Schedule__c/fields/Large_Order_Notification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_Notification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>3 Days Prior to the Delivery Date (Excluding Weekends)</inlineHelpText>
    <label>Large Order Notification Complete</label>
    <type>Checkbox</type>
</CustomField>