force-app/main/default/objects/Delivery_Schedule__c/fields/Large_Order_Notification_Formula_Date__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_Notification_Formula_Date__c</fullName>
    <formula>Delivery_Date__c - 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Large Order Notification Formula Date</label>
    <type>Date</type>
</CustomField>