force-app/main/default/objects/Delivery_Schedule__c/fields/Large_Order_Notification_Task__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_Notification_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Large Order Notification Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>Delivery Schedules (Large Order Notification Task)</relationshipLabel>
    <relationshipName>Delivery_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>