force-app/main/default/objects/Delivery_Schedule__c/fields/Large_Order_NotificationDue__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_NotificationDue__c</fullName>
    <label>Large Order Notification Due</label>
    <type>Date</type>
</CustomField>