force-app/main/default/objects/Delivery_Schedule__c/fields/Open_Task__c.field-meta.xml
<CustomField>
    <fullName>Open_Task__c</fullName>
    <label>Open Task</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>