force-app/main/default/objects/Delivery_Schedule__c/fields/Permanent_power_and_running__c.field-meta.xml
<CustomField>
    <fullName>Permanent_power_and_running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permanent power and running</label>
    <type>Checkbox</type>
</CustomField>