force-app/main/default/objects/Delivery_Schedule__c/fields/Reviewed_Not_Ready_Clause__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Not_Ready_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reviewed what happens if we send trucks out to the site after the customer states they were ready for the delivery; however our teams arrive and find out the customer wasn’t really ready.</inlineHelpText>
    <label>Reviewed Not Ready Clause</label>
    <type>Checkbox</type>
</CustomField>