force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Approved__c.field-meta.xml
<CustomField>
    <fullName>Site_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Approved</label>
    <type>Checkbox</type>
</CustomField>