force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Confirmation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Site_Confirmation_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Confirmation Task Created</label>
    <type>Checkbox</type>
</CustomField>