force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Confirmation_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Site_Confirmation_Due_By__c</fullName>
    <inlineHelpText>3 Weeks prior to delivery</inlineHelpText>
    <label>Site Confirmation Due By</label>
    <type>Date</type>
</CustomField>