force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Confirmation_Formula_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Confirmation_Formula_Date__c</fullName>
    <formula>Delivery_Date__c - 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Confirmation Formula Date</label>
    <type>Date</type>
</CustomField>