force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Confirmation_Task__c.field-meta.xml
<CustomField>
    <fullName>Site_Confirmation_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Confirmation Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>Delivery Schedules</relationshipLabel>
    <relationshipName>Delivery_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>