force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Schedules</relationshipLabel>
    <relationshipName>Delivery_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>