force-app/main/default/objects/Delivery_Schedule__c/fields/Site_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Contact_Phone__c</fullName>
    <formula>Site_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Contact Phone</label>
    <type>Text</type>
</CustomField>