force-app/main/default/objects/Delivery_Schedule__c/fields/Still_on_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Still_on_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Are you still on schedule for the order you requested to be delivered on?</inlineHelpText>
    <label>Still on Schedule?</label>
    <type>Checkbox</type>
</CustomField>