force-app/main/default/objects/Delivery_Schedule__c/fields/TEST_DATE__c.field-meta.xml
<CustomField>
    <fullName>TEST_DATE__c</fullName>
    <description>0 Saturday
1 Sunday
2 Monday
3 Tuesday
4 Wednesday
5 Thursday
6 Friday</description>
    <formula>CASE( 
  MOD(  Delivery_Date__c - Date ( 1900, 1, 7 ), 7 ),
  3, Delivery_Date__c + 2 + 3,
  4, Delivery_Date__c  + 2 + 3,
  5, Delivery_Date__c + 2 + 3,
  6, Delivery_Date__c + 1 + 3,
  Delivery_Date__c + 3
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST DATE</label>
    <type>Date</type>
</CustomField>