force-app/main/default/objects/Delivery_Schedule__c/fields/Web_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Web_Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Forecast</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Web_Forecast__c.Contract__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contract__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Web_Forecast__c</referenceTo>
    <relationshipLabel>Delivery Schedules</relationshipLabel>
    <relationshipName>Delivery_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>