force-app/main/default/objects/Delivery_Schedule__c/fields/Working_elevator_for_units_pass_the_3rd__c.field-meta.xml
<CustomField>
    <fullName>Working_elevator_for_units_pass_the_3rd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Working elevator for units pass the 3rd</label>
    <type>Checkbox</type>
</CustomField>