force-app/main/default/objects/Delivery_Schedule__c/fields/X48_Hour_Pre_Call_Due__c.field-meta.xml
<CustomField>
    <fullName>X48_Hour_Pre_Call_Due__c</fullName>
    <inlineHelpText>48 Days before delivery date</inlineHelpText>
    <label>48 Hour Pre-Call Due</label>
    <type>Date</type>
</CustomField>