force-app/main/default/objects/Delivery_Schedule__c/fields/X48_Hour_Pre_Call_Task__c.field-meta.xml
<CustomField>
    <fullName>X48_Hour_Pre_Call_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>48 Hour Pre-Call Task</label>
    <referenceTo>agf__ADM_Task__c</referenceTo>
    <relationshipLabel>Delivery Schedules (48 Hour Pre-Call Task)</relationshipLabel>
    <relationshipName>Delivery_Schedules4</relationshipName>
    <type>Lookup</type>
</CustomField>