force-app/main/default/objects/Delivery_Schedule__c/fields/X72_Hour_Pre_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>X72_Hour_Pre_Call_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>72 Hour Pre Call Completed</label>
    <type>Checkbox</type>
</CustomField>