force-app/main/default/objects/Delivery_Schedule__c/fields/X72_Hour_Pre_Call_Due__c.field-meta.xml
<CustomField>
    <fullName>X72_Hour_Pre_Call_Due__c</fullName>
    <label>72 Hour Pre Call Due</label>
    <type>Date</type>
</CustomField>