force-app/main/default/objects/Delivery_Schedule__c/fields/X72_Hour_Pre_Call_Formula_Date__c.field-meta.xml
<CustomField>
    <fullName>X72_Hour_Pre_Call_Formula_Date__c</fullName>
    <formula>Delivery_Date__c - 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>72 Hour Pre Call Formula Date</label>
    <type>Date</type>
</CustomField>