force-app/main/default/objects/Delivery_Schedule__c/validationRules/Must_be_Answered_for_Status_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_be_Answered_for_Status_Update</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
Still_on_Schedule__c = False,
Permanent_power_and_running__c= False,
Working_elevator_for_units_pass_the_3rd__c = False,
Clear_paths_to_the_entry_of_the_building__c = False, 
Reviewed_Not_Ready_Clause__c = False) &amp;&amp;
NOT(ISPICKVAL(Delivery_Status__c, &quot;New&quot;))</errorConditionFormula>
    <errorMessage>Please complete Site Confirmation Section before updating status.</errorMessage>
</ValidationRule>