force-app/main/default/objects/Delivery_Schedule__c/listViews/Project_Managers_Delivery_Schedule.listView-meta.xml
<ListView>
    <fullName>Project_Managers_Delivery_Schedule</fullName>
    <filterScope>Queue</filterScope>
    <label>Project Managers</label>
    <queue>Project_Managers</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>