force-app/main/default/objects/Delivery_Schedule__c/listViews/Unscheduled_Deliveries.listView-meta.xml
<ListView>
    <fullName>Unscheduled_Deliveries</fullName>
    <columns>NAME</columns>
    <columns>Construction_Project__c</columns>
    <columns>Delivery_Status__c</columns>
    <columns>Order__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Delivery_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unscheduled Deliveries</label>
</ListView>